* index.html: Added a couple pending news items.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -72,6 +72,24 @@ can see the <a href="libgcj-classpath-compare.html">status of the merge</a>.)
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>January 14, 2002</b>
+</td><td>
+Richard Stallman has changed the licensing of the Classpath AWT
+implementation to match the licensing of the rest of Classpath.  This
+means that the only remaining barrier to AWT for libgcj is manpower.
+Work has already begun to merge the Classpath and libgcj AWT
+implementations.
+</td></tr>
+
+<tr><td valign="top">
+<b>January 14, 2002</b>
+</td><td>
+Adam Megacz anounced that <a href="http://www.xwt.org">XWT</a> is
+an ActiveX control which is written in Java and compiled with gcj.
+We hope to be checking in his Windows patches in the near future.
+</td></tr>
+
+<tr><td valign="top">
 <b>December 14, 2001</b>
 </td><td>
 Hans Boehm has checked in changes which once again allow gcj and
