* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -19,36 +19,15 @@ differences are currently required.</p>
 
 <table border=1 width="100%">
 <tr><th>Class</th> <th>libgcj</th> <th>Classpath</th> <th>Merge Status</th> </tr>
-<tr> <td>java.awt.Adjustable</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Adjustable.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.CheckboxMenuItem</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.CheckboxMenuItem.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.Choice</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Choice.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.Color</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Color.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.Cursor</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Cursor.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.Dialog</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Dialog.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.FileDialog</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.FileDialog.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.Font</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Font.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.FontMetrics</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.FontMetrics.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.GridBagConstraints</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.awt.Image</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Image.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.ImageMediaEntry</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.ImageMediaEntry.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.Insets</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Insets.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.List</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.List.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.MediaEntry</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.MediaEntry.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.MediaTracker</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.MediaTracker.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.Menu</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Menu.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.MenuBar</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.MenuBar.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.MenuContainer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.MenuContainer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.MenuShortcut</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.MenuShortcut.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.Panel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Panel.diff">Diff</a></td> </tr>
+<tr> <td>java.awt.PaintContext</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.PaintContext.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.Polygon</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.awt.PopupMenu</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.PopupMenu.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.PrintGraphics</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.awt.PrintJob</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.awt.ScrollPane</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.awt.ScrollPaneAdjustable</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.awt.Scrollbar</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.awt.Shape</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.awt.SystemColor</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.SystemColor.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.TextArea</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.awt.TextComponent</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.awt.TextField</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
@@ -114,32 +93,6 @@ differences are currently required.</p>
 <tr> <td>java.awt.image.PixelGrabber</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.awt.image.RGBImageFilter</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.awt.image.ReplicateScaleFilter</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>java.awt.peer.ButtonPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.ButtonPeer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.peer.CanvasPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.CanvasPeer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.peer.CheckboxMenuItemPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.CheckboxMenuItemPeer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.peer.CheckboxPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.CheckboxPeer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.peer.ChoicePeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.ChoicePeer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.peer.ComponentPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.ComponentPeer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.peer.ContainerPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.ContainerPeer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.peer.DialogPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.DialogPeer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.peer.FileDialogPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.FileDialogPeer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.peer.FontPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.FontPeer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.peer.FramePeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.FramePeer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.peer.LabelPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.LabelPeer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.peer.LightweightPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.LightweightPeer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.peer.ListPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.ListPeer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.peer.MenuBarPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.MenuBarPeer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.peer.MenuComponentPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.MenuComponentPeer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.peer.MenuItemPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.MenuItemPeer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.peer.MenuPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.MenuPeer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.peer.PanelPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.PanelPeer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.peer.PopupMenuPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.PopupMenuPeer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.peer.ScrollPanePeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.ScrollPanePeer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.peer.ScrollbarPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.ScrollbarPeer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.peer.TextAreaPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.TextAreaPeer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.peer.TextComponentPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.TextComponentPeer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.peer.TextFieldPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.TextFieldPeer.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.peer.WindowPeer</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.peer.WindowPeer.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.print.Book</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.awt.print.PageFormat</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.awt.print.Pageable</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
