* index.html: Mention builtins patch.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -72,6 +72,16 @@ can see the <a href="libgcj-classpath-compare.html">status of the merge</a>.)
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>January 22, 2002</b>
+</td><td>
+Tom Tromey has checked in a patch to allow certain Java method calls
+to be inlined by gcj.  For instance, calls to <code>Math.min</code>
+are now inlined when optimization is enabled.  This patch includes
+some infrastructure to make it easy to add more such inlines when
+desired.
+</td></tr>
+
+<tr><td valign="top">
 <b>January 14, 2002</b>
 </td><td>
 Richard Stallman has changed the licensing of the Classpath AWT
