Remove all align="..." attributes from <h1> tags. By Andrea 'Fyre Wyzard' Bocci <fwyzard@inwind.it>.

--- a/htdocs/about.html
+++ b/htdocs/about.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<h1 align="center">GCC: About</h1>
+<h1>GCC: About</h1>
 
 <p>These pages are maintained by the GCC team, which consists of
 numerous
