--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<h1 align="center">Contributing to GCC</h1>
+<h1>Contributing to GCC</h1>
 
 <p>We strongly encourage contributions of code, bug fixes, new
 optimizations, new features, documentation updates, web page
