--- a/htdocs/cvsup.html
+++ b/htdocs/cvsup.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<h1 align="center">GCC: Accessing the repository through CVSup</h1>
+<h1>GCC: Accessing the repository through CVSup</h1>
 
 <p><code>gcc.gnu.org</code> does support CVSup, but not for anonymous
 users.</p>
