--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<h1 align="center">Read-write CVS access</h1>
+<h1>Read-write CVS access</h1>
 
 <p>We have read/write access to the CVS repository available for all
 our significant developers. Maintainers are also encouraged to edit
