--- a/htdocs/egcs-1.0/buildstat.html
+++ b/htdocs/egcs-1.0/buildstat.html
@@ -3,7 +3,7 @@
 <title> Build and Test status for EGCS 1.0</title>
 </head>
 <body>
-<h1 align="center">Build and Test status for EGCS 1.0</h1>
+<h1>Build and Test status for EGCS 1.0</h1>
 
 <p>Regression testing is relative to gcc-2.7.*; only regressions relative
 to gcc-2.7 are noted.
