--- a/htdocs/egcs-1.0/c++features.html
+++ b/htdocs/egcs-1.0/c++features.html
@@ -3,7 +3,7 @@
 <title>EGCS 1.0 C++ Features</title>
 </head>
 <body>
-<h1 align="center">EGCS 1.0 C++ Features</h1>
+<h1>EGCS 1.0 C++ Features</h1>
 
 
 <pre>
