--- a/htdocs/egcs-1.0/caveats.html
+++ b/htdocs/egcs-1.0/caveats.html
@@ -3,7 +3,7 @@
 <title>EGCS 1.0 Caveats</title>
 </head>
 <body>
-<h1 align="center">EGCS 1.0 Caveats</h1>
+<h1>EGCS 1.0 Caveats</h1>
 
 <ul>
   <li>EGCS has an integrated libstdc++, but does not have an integrated libg++.
