--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-<h1 align="center">Build and Test status for EGCS 1.1</h1>
+<h1>Build and Test status for EGCS 1.1</h1>
 
 <p><b>alpha-dec-osf3.2</b><br>
 Successful
