--- a/htdocs/egcs-1.1/features.html
+++ b/htdocs/egcs-1.1/features.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-<h1 align="center">EGCS 1.1 new features</h1>
+<h1>EGCS 1.1 new features</h1>
 
 <ul>
   <li>Integrated GNU Fortran (<code>g77</code>) compiler and runtime library
