--- a/htdocs/extensions.html
+++ b/htdocs/extensions.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1 align="center">GCC extensions</h1>
+<h1>GCC extensions</h1>
 
 <p>This is a list of (experimental) extensions to GCC which, for one
 reason or the other, did not (yet) make it into the official source
