--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<h1 align="center">GCC Frequently Asked Questions</h1>
+<h1>GCC Frequently Asked Questions</h1>
 
 <p>The latest version of this document is always available at 
 <a href="http://www.gnu.org/software/gcc/faq.html">http://www.gnu.org/software/gcc/faq.html</a>.</p>
