--- a/htdocs/gcc-2.95/gcc-2.95.1.html
+++ b/htdocs/gcc-2.95/gcc-2.95.1.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1 align="center">GCC 2.95.1</h1>
+<h1>GCC 2.95.1</h1>
 <p>August 19, 1999
 
 <p>The GNU project and the GCC/EGCS developers are pleased to announce the
