--- a/htdocs/gcc-2.95/regress.html
+++ b/htdocs/gcc-2.95/regress.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1 align="center">GCC 2.95 regression test strategy</h1>
+<h1>GCC 2.95 regression test strategy</h1>
 
 <h2>Regression Testing</h2>
 <p>One of the critical steps in making releases is regression testing.  For
