--- a/htdocs/gcc-2.95/schedule.html
+++ b/htdocs/gcc-2.95/schedule.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1 align="center">GCC 2.95</h1>
+<h1>GCC 2.95</h1>
 
 <p> It was recently announced that the EGCS project would be taking over
 maintenance of GCC.  To help reinforce this change in maintainership and
