--- a/htdocs/gcc-2.95/testing.html
+++ b/htdocs/gcc-2.95/testing.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1 align="center">Testing GCC 2.95 with the current testsuite</h1>
+<h1>Testing GCC 2.95 with the current testsuite</h1>
 
 <p>For the upcoming GCC 2.95.3 release, we need to perform tests on as many
 platforms as possible to make sure we have no regressions from the previous
