--- a/htdocs/gcc-3.0/c++features.html
+++ b/htdocs/gcc-3.0/c++features.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1 align="center">Improved C++ Support in GCC 3.0</h1>
+<h1>Improved C++ Support in GCC 3.0</h1>
 
 <ul>
  <li>Improvements:
