--- a/htdocs/gcc-3.0/criteria.html
+++ b/htdocs/gcc-3.0/criteria.html
@@ -9,7 +9,7 @@
 <p><big>This document is obsolete and kept for historical reference
 only.</big></p>
 
-<h1 align="center">GCC 3.0 Release Criteria</h1>
+<h1>GCC 3.0 Release Criteria</h1>
 
 <p>This page provides the release criteria for GCC 3.0.  GCC 3.0 will
 not be released until these criteria have been met.  This page
