--- a/htdocs/gcc-3.0/index.html
+++ b/htdocs/gcc-3.0/index.html
@@ -15,7 +15,7 @@ December 20, 2001: GCC 3.0.3 has been released.<br />
 
 <hr>
 
-<h1 align="center">GCC 3.0.3</h1>
+<h1>GCC 3.0.3</h1>
 
 <p>December 20, 2001</p>
 
