--- a/htdocs/gcc-3.0/libgcc.html
+++ b/htdocs/gcc-3.0/libgcc.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1 align="center">libgcc</h1>
+<h1>libgcc</h1>
 
 <p>This page provides a summary of discussions about the pros and cons
 of distributing <code>libgcc</code> as a shared library, as well as a
