--- a/htdocs/gcc-3.0/pooma-guide.html
+++ b/htdocs/gcc-3.0/pooma-guide.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1 align="center">POOMA build and test guide</h1>
+<h1>POOMA build and test guide</h1>
 
 <p>This page is a guide to building the POOMA parallel object-oriented
 code and running its test programs.</p>
