--- a/htdocs/gcc-3.1/caveats.html
+++ b/htdocs/gcc-3.1/caveats.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1 align="center">GCC 3.1 Caveats</h1>
+<h1>GCC 3.1 Caveats</h1>
 
 <ul>
   <li>This is to become the first caveat.</li>
