--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1 align="center">GCC 3.1 Changes, New Features, and Fixes</h1>
+<h1>GCC 3.1 Changes, New Features, and Fixes</h1>
 
 <ul>
   <li>General Optimizer Improvements</li>
