--- a/htdocs/gccmission.html
+++ b/htdocs/gccmission.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<h1 align="center">GCC Development Mission Statement (1999-04-22)</h1>
+<h1>GCC Development Mission Statement (1999-04-22)</h1>
 
 <p>GCC development is a part of the <a href="http://www.gnu.org/">GNU
 Project</a>, aiming to improve the compiler used in the GNU system
