--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<h1 align="center">GCC mirror sites</h1>
+<h1>GCC mirror sites</h1>
 
 <p>These sites mirror the gcc.gnu.org FTP site (California, USA) directly.
 Please let us know if you are mirroring our FTP site so we can note it
