--- a/htdocs/projects/ast-optimizer.html
+++ b/htdocs/projects/ast-optimizer.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-<h1 align=center>Abstract Syntax Tree Optimizations</h1>
+<h1>Abstract Syntax Tree Optimizations</h1>
 
 <p>This page describes ongoing work to improve GCC's tree based
 optimizations. There is a branch in CVS called,
