--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -81,7 +81,7 @@ exclusive.</a>
 <!-- table of contents end -->
 
 
-<h1 align=center>GCC Projects</h1>
+<h1>GCC Projects</h1>
 
 <h2><a name="fix_bugs_in_the_gnats_database">Fix bugs in the GNATS database</a></h2>
 <p>You can investigate bugs in our <a href="../gnats.html">GNATS
