--- a/htdocs/projects/prefetch.html
+++ b/htdocs/projects/prefetch.html
@@ -5,7 +5,7 @@
 <title>Data Prefetch Support</title>
 </head>
 
-<h1 align="center">Data Prefetch Support</h1>
+<h1>Data Prefetch Support</h1>
 
 <h2><a name="toc">Contents</a></h2>
 <ul>
