--- a/htdocs/steering.html
+++ b/htdocs/steering.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<h1 align="center">GCC steering committee</h1>
+<h1>GCC steering committee</h1>
 
 <p>The GCC steering committee was founded in 1998 with the intent
 of preventing any particular individual, group or organization from
