--- a/htdocs/badspammer.html
+++ b/htdocs/badspammer.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1 align="center"><a href="/index.html">GCC</a></h1>
+<h1><a href="/index.html">GCC</a></h1>
 
 <h1>Spambot detected</h1>
 
