--- a/htdocs/egcs-1.1/egcs-1.1-branch.html
+++ b/htdocs/egcs-1.1/egcs-1.1-branch.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-<h1 align="center">EGCS 1.1 branch</h1>
+<h1>EGCS 1.1 branch</h1>
 
 <p>We have made a branch in the source tree for EGCS 1.1.  Depending on your
 situation you have three choices for handling your CVS tree.
