--- a/htdocs/egcs-1.1/egcs-1.1-test.html
+++ b/htdocs/egcs-1.1/egcs-1.1-test.html
@@ -3,7 +3,7 @@
 <title>EGCS 1.1 test strategy</title>
 </head>
 <body>
-<h1 align="center">EGCS 1.1 test strategy</h1>
+<h1>EGCS 1.1 test strategy</h1>
 
 <ul>
   <li> <a href="regress.html">No testsuite regressions on major platforms</a>.  DONE.
