--- a/htdocs/egcs-1.1/regress.html
+++ b/htdocs/egcs-1.1/regress.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-<h1 align="center">EGCS 1.1 regression test strategy</h1>
+<h1>EGCS 1.1 regression test strategy</h1>
 
 <p>One of the critical steps in making releases is regression testing.  For
 EGCS 1.1 we want to perform regression tests against GCC 2.8.1 and 
