--- a/htdocs/egcs-1.1/schedule.html
+++ b/htdocs/egcs-1.1/schedule.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-<h1 align="center">EGCS 1.1</h1>
+<h1>EGCS 1.1</h1>
 
 <p>The EGCS project is rapidly approaching its second major release
 (EGCS 1.1).
