--- a/htdocs/frontends.html
+++ b/htdocs/frontends.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1 align=center>GCC Front Ends</h1>
+<h1>GCC Front Ends</h1>
 
 <p>Currently the main GCC distribution contains front ends for C
 (gcc), C++ (g++), Objective C, Chill (unmaintained),
