--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1 align="center">Build status for GCC 2.95</h1>
+<h1>Build status for GCC 2.95</h1>
 
 <p><b>alpha-dec-osf4.0b</b><br>
 Successful
