--- a/htdocs/gcc-2.95/caveats.html
+++ b/htdocs/gcc-2.95/caveats.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1 align="center">GCC 2.95 Caveats</h1>
+<h1>GCC 2.95 Caveats</h1>
 
 <ul>
   <li>GCC 2.95 will issue an error for invalid asm statements that had been
