--- a/htdocs/gcc-2.95/features.html
+++ b/htdocs/gcc-2.95/features.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1 align="center">GCC 2.95 New Features</h1>
+<h1>GCC 2.95 New Features</h1>
 
 <ul>
   <li> General Optimizer Improvements:
