--- a/htdocs/gcc-2.95/othertest.html
+++ b/htdocs/gcc-2.95/othertest.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1 align="center">GCC 2.95 other tests</h1>
+<h1>GCC 2.95 other tests</h1>
 
 
 <h2>Package/Feature Testing</h2>
