--- a/htdocs/gcc-3.0/caveats.html
+++ b/htdocs/gcc-3.0/caveats.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1 align="center">GCC 3.0 Caveats</h1>
+<h1>GCC 3.0 Caveats</h1>
 
 <ul>
   <li>Enumerations are now properly promoted to <code>int</code> in
