--- a/htdocs/gcc-3.0/lapack-guide.html
+++ b/htdocs/gcc-3.0/lapack-guide.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1 align="center">LAPACK build and test guide</h1>
+<h1>LAPACK build and test guide</h1>
 
 <p>This page is a guide to building the LAPACK linear algebra
 package and running its testing and timing programs.</p>
