--- a/htdocs/gcc-3.1/criteria.html
+++ b/htdocs/gcc-3.1/criteria.html
@@ -9,7 +9,7 @@
 <p><big>This document is still in its larval stage, and should not yet be
 taken as canonical.  Most of the text is only a placeholder.</big></p>
 
-<h1 align="center">GCC 3.1 Release Criteria</h1>
+<h1>GCC 3.1 Release Criteria</h1>
 
 <p>This page provides the release criteria for GCC 3.1.  GCC 3.1 will
 not be released until these criteria have been met.  This page
