--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1 align="center">Simple GCC projects</h1>
+<h1>Simple GCC projects</h1>
 
 <p>This page lists projects which are feasible for people who aren't
 intimately familiar with GCC's internals.  Many of them are things
