--- a/htdocs/projects/cpplib.html
+++ b/htdocs/projects/cpplib.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1 align="center">Projects relating to cpplib</h1>
+<h1>Projects relating to cpplib</h1>
 
 <p>cpplib has largely been completed, and is stable at this point.
 For GCC versions 3.0 and later, it is linked into the C, C++ and
