--- a/htdocs/projects/ia64.html
+++ b/htdocs/projects/ia64.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1 align=center>Projects to improve performance on IA-64</h1>
+<h1>Projects to improve performance on IA-64</h1>
 <!-- table of contents start -->
 <h2><a name="toc">Contents:</a></h2>
 
