--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -8,7 +8,7 @@
 
 <body>
 
-<h1 align="center">Links and Selected Readings</h1>
+<h1>Links and Selected Readings</h1>
 
 
 <h2>GCC-specific Literature</h2>
