--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<h1 align="center">GCC Releases</h1>
+<h1>GCC Releases</h1>
 
 <p>Apart from providing our <a href="cvs.html">sources by means of CVS</a>
 we also make source code for our releases available for FTP download from
