--- a/htdocs/rsync.html
+++ b/htdocs/rsync.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<h1 align="center">GCC: Anonymous read-only rsync access</h1>
+<h1>GCC: Anonymous read-only rsync access</h1>
 
 <p>In an ongoing effort to accelerate development of GCC and provide an
 open development environment, we are offering our CVS repository and
