--- a/htdocs/snapshots.html
+++ b/htdocs/snapshots.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<h1 align="center">GCC Snapshots</h1>
+<h1>GCC Snapshots</h1>
 
 <p>We recommend that you use <a href="cvs.html">CVS to access our
 current development sources</a>.</p>
