--- a/htdocs/spam.html
+++ b/htdocs/spam.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1 align="center">Dealing with SPAM</h1>
+<h1>Dealing with SPAM</h1>
 
 <p>Occasionally some bozo decides to spam the GCC mailing lists.  While we
 wish this would not happen, it is a fact of life on an open list (we do not
