--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -74,7 +74,7 @@ can see the <a href="libgcj-classpath-compare.html">status of the merge</a>.)
 <tr><td valign="top">
 <b>January 22, 2002</b>
 </td><td>
-Tom Tromey has checked in a patch to allow certain Java method calls
+Tom Tromey has contributed a patch to allow certain Java method calls
 to be inlined by gcj.  For instance, calls to <code>Math.min</code>
 are now inlined when optimization is enabled.  This patch includes
 some infrastructure to make it easy to add more such inlines when
