--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -598,7 +598,8 @@ directly into the output.  The new style uses the
 generate RTL.</p>
 
 <p>The situation here is a bit weird.  Targets which only have
-<code>FUNCTION_PROLOGUE/EPILOGUE</code> in <code>tm.h</code> are:</p>
+<code>TARGET_ASM_FUNCTION_PROLOGUE/EPILOGUE</code> in
+<code>tm.h</code> are:</p>
 <pre>
   1750a a29k arc avr clipper dsp16xx elxsi h8300 i370 i860 i960
   m68k ns32k pdp11 romp vax
